# xpc-connection-rs

.github/workflows/: main.yml
examples/: Makefile
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/echo-server/: Cargo.toml  echo-agent.plist  echo-daemon.plist
examples/echo-server/src/: main.rs
xpc-connection/: Cargo.toml
xpc-connection-sys/: Cargo.toml  build.rs
xpc-connection/src/: dlsym.rs  lib.rs  message.rs
xpc-connection/tests/: message_round_trip.rs
