[package]
authors = ["Dylan Frankland <github@frankland.io>"]
name = "xpc-connection"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "XPC connection bindings for Rust"
homepage = "https://github.com/dfrankland/xpc-connection-rs"
repository = "https://github.com/dfrankland/xpc-connection-rs"
keywords = ["xpc", "mac", "macOS"]
categories = ["os", "api-bindings", "concurrency", "encoding"]

[features]
audit_token = ["core-foundation", "security-framework"]
default = []

[dependencies]
block = "0.1.6"
futures = "0.3.4"
xpc-connection-sys = { path = "../xpc-connection-sys", version = "0.1.0" }

# Remove when weak linkage is stable
libc = "0.2.97"

# For the audit_token feature
core-foundation = { version = "0.10.0", optional = true }
security-framework = { version = "^3.2.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
