[package]
name = "echo-server"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
xpc-connection = { path = "../../xpc-connection", features = ["audit_token"] }
